# koladata

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE.bzlmod  requirements.in  requirements_lock.txt
bazel_local_registry/: bazel_registry.json
bazel_local_registry/modules/arolla/: metadata.json
build_pypi_package/: Dockerfile  build.sh  pack.sh
docs/: 10_min_intro.md  BUILD  _config.yml  api_reference.md  arolla.md  cheatsheet.css  cheatsheet.md  common_pitfalls.md  creating_operators.md  data_slice.md  deep_dive.md  doc_test.py  error_message.md  extension_types.md  fundamentals.md  glossary.md  index.md  koda_v1_api_reference.md  overview.md  persistent_storage.md  profiling.md  quick_recipes.md  quick_recipes_test.py
docs/_data/: navigation.yml
docs/_layouts/: default.html
docs/api/: data_bag.md  data_item.md  data_slice.md  kd.md  kd_ext.md  schema_item.md
docs/api/kd/: allocation.md  annotation.md  assertion.md  bags.md  bitwise.md  comparison.md  core.md  expr.md  (+32 more)
docs/deep_dive/: data_bag.md  data_slice.md  functors.md  jagged_shape.md  overview.md  schema.md
koladata/: BUILD  adoption_utils.cc  adoption_utils.h  adoption_utils_test.cc  alloc_utils.h  alloc_utils_test.cc  arolla_utils.cc  arolla_utils.h  arolla_utils_test.cc  attr_error_utils.cc  attr_error_utils.h  benchmarks.cc  casting.cc  casting.h  casting_test.cc  check_frozen.cc  check_frozen.h  check_frozen_test.cc  data_bag.cc  data_bag.h  data_bag_comparison.h  data_bag_comparison_test.cc  data_bag_repr.cc  data_bag_repr.h  data_bag_repr_test.cc  data_bag_test.cc  data_slice.cc  data_slice.h  data_slice_op.h  data_slice_op_test.cc  data_slice_qtype.cc  data_slice_qtype.h  data_slice_repr.cc  data_slice_repr.h  data_slice_repr_test.cc  data_slice_test.cc  deep_diff_utils.cc  deep_diff_utils.h  deep_diff_utils_test.cc  error_repr_utils.cc  (+46 more)
koladata/_agent/: BUILD
koladata/codemaker/: BUILD.tmpl
koladata/contrib/: BUILD  flatten_cyclic_references.cc  flatten_cyclic_references.h  operators.cc  sanitize_names.cc  sanitize_names.h
koladata/expr/: BUILD  compile_expr_operators.cc  constants.cc  constants.h  constants_test.cc  expr_eval.cc  expr_eval.h  expr_eval_test.cc  expr_operators.cc  expr_operators.h  expr_operators_repr.cc  expr_operators_test.cc  init_expr_operators.cc  non_determinism.cc  non_determinism.h
koladata/functor/: BUILD  aggregate_operator.cc  aggregate_operator.h  auto_variables.cc  auto_variables.h  bind_operator.cc  bind_operator.h  call.cc  call.h  call_operator.cc  call_operator.h  call_test.cc  cpp_function_bridge.cc  cpp_function_bridge.h  cpp_function_bridge_test.cc  default_signature.cc  default_signature.h  default_signature_test.cc  expr_fn_operator.cc  expr_fn_operator.h  functor.cc  functor.h  functor_storage.cc  functor_storage.h  functor_storage_test.cc  functor_test.cc  is_fn_operator.cc  is_fn_operator.h  map.cc  map.h  map_operator.cc  map_operator.h  map_test.cc  operators.cc  signature.cc  signature.h  signature_storage.cc  signature_storage.h  signature_storage_test.cc  signature_test.cc  (+13 more)
koladata/g3doc/: error_message.md
koladata/ids/: BUILD  auto_id_cleanup_update.cc  auto_id_cleanup_update.h  auto_id_update.cc  auto_id_update.h  auto_reference_update.cc  auto_reference_update.h  operators.cc
koladata/internal/: BUILD  README.md  benchmark_helpers.cc  benchmark_helpers.h  casting.cc  casting.h  casting_test.cc  data_bag.cc  data_bag.h  data_bag_benchmarks.cc  data_bag_dict_test.cc  data_bag_extract_content_test.cc  data_bag_list_test.cc  data_bag_merge_test.cc  data_bag_schema_test.cc  data_bag_test.cc  data_item.cc  data_item.h  data_item_benchmarks.cc  data_item_test.cc  data_list.cc  data_list.h  data_list_test.cc  data_slice.cc  data_slice.h  data_slice_accessors.cc  data_slice_accessors.h  data_slice_accessors_test.cc  data_slice_benchmarks.cc  data_slice_test.cc  dense_source.cc  dense_source.h  dense_source_benchmarks.cc  dense_source_test.cc  dict.cc  dict.h  dict_benchmarks.cc  dict_test.cc  dtype.cc  dtype.h  (+55 more)
koladata/iterables/: BUILD  expr_operators.cc  expr_operators.h  from_data_slice_operators.cc  from_data_slice_operators.h  init_expr_operators.cc  iterable_qtype.cc  iterable_qtype.h  iterable_qtype_test.cc  operators.cc  reduce_operators.cc  reduce_operators.h  sequence_operators.cc  sequence_operators.h
koladata/operators/: BUILD  align.cc  align.h  allocation.h  arolla_bridge.cc  arolla_bridge.h  arolla_bridge_test.cc  assertion.h  bags.cc  bags.h  binary_op.h  binary_op_test.cc  bitwise.cc  bitwise.h  clone.h  collapse.h  comparison.cc  comparison.h  compile_expr_operators.cc  concat_or_stack.cc  concat_or_stack.h  convert_and_eval.cc  convert_and_eval.h  convert_and_eval_test.cc  core.cc  core.h  core_dict.cc  core_dict.h  core_list.cc  core_list.h  core_new.cc  core_new.h  core_obj.cc  core_obj.h  core_uuid.cc  core_uuid.h  curves.cc  curves.h  dict.h  dicts.cc  (+86 more)
koladata/proto/: BUILD  annotations.proto  from_proto.cc  from_proto.h  from_proto_test.cc  message_factory.cc  message_factory.h  message_factory_test.cc  proto_schema_utils.h  to_proto.cc  to_proto.h  to_proto_benchmark.cc  to_proto_test.cc
koladata/s11n/: BUILD  codec.proto  codec_names.h  decoder.cc  encoder.cc  serialization_benchmarks.cc  serialization_test.cc
koladata/serving/: BUILD  slice_registry.cc  slice_registry.h  slice_registry_test.cc
koladata/shape/: BUILD  shape_utils.h  shape_utils_test.cc
koladata/testing/: BUILD  matchers.h  matchers_test.cc  status_matchers_backport.cc  status_matchers_backport.h  test_env.cc  traversing_utils.cc  traversing_utils.h  traversing_utils_test.cc
py/: BUILD
py/koladata/: BUILD  README.md  benchmarks.py  cc_benchmarks.cc  kd.py  kd_dynamic.py  kd_dynamic.pyi  kd_ext.py  kd_ext_test.py  kd_test.py  kd_types.py  kd_types.pyi  py_extension.bzl
ts/: BUILD.bazel  compact_table.ts  data_slice_webcomponents.ts  integration_elements.ts  multi_dim_nav.ts  multi_dim_table.ts  multi_dim_table_handlers.ts  multi_dim_table_infer.ts  multi_dim_table_render.ts  multi_dim_table_style.ts  multi_index_flag.ts  nano_element.ts
(+1672 files in other folders)
