# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")

package(
    default_visibility = ["//visibility:public"],
)

esbuild(
    name = "data_slice_webcomponents",
    srcs = [
        "compact_table.ts",
        "data_slice_webcomponents.ts",
        "integration_elements.ts",
        "multi_dim_nav.ts",
        "multi_dim_table.ts",
        "multi_dim_table_handlers.ts",
        "multi_dim_table_render.ts",
        "multi_dim_table_style.ts",
        "multi_index_flag.ts",
        "nano_element.ts",
    ],
    bundle = True,
    entry_point = "data_slice_webcomponents.ts",
    esbuild_log_level = "verbose",
    minify = True,
)
